--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-
+  justify-content:space-between;
+  
 }
 .header{
   background:rgba(255,255,255,0.4);
@@ -29,5 +30,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
+}
 
+.text-input{
+  background:rgba(255,255,255,0.4);
+  border-bottom:1px solid white;
+  height: 2rem;
 }
